Workaround for codox InaccessibleObjectException